[refs #119892] Fix column titles horizontal align in homepage.

--- a/land/copernicus/theme/skins/copernicus_theme_styles/redesign-app.css
+++ b/land/copernicus/theme/skins/copernicus_theme_styles/redesign-app.css
@@ -6987,6 +6987,11 @@ footer .text {
   position: relative;
   z-index: 2 !important; }
 
+body.template-homepage div#content-core {
+  position: relative;
+  top: -20px;
+}
+
 .land-title,
 div#content h1.documentFirstHeading,
 #parent-fieldname-title {
